--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,6 @@ apply plugin: 'groovy'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-
-    compile "com.android.tools.build:gradle:2.1.0"
-
-
+    compile 'com.android.tools.build:gradle:2.1.0'
+    compile files('libs/gradle-task-7z-0.1.0.jar')
 }
